2012-01-06

	* src/trayicon.c: extended the blinking period of tray icon to 10
	  seconds.

2012-01-06

	* manual/ja/sylpheed.sgml: updated Japanese manual.

2012-01-05

	* src/prefs_common_dialog.c: fixed a typo.

2011-12-27

	* version 3.2.0beta5

2011-12-26

	* src/rpop3.c: added refresh (reload) menu.

2011-12-22

	* src/rpop3.c: implemented reloading after the loading stopped.

2011-12-21

	* src/rpop3.c: supported SOCKS proxy.
	  Receive message headers from the latest one.

2011-12-21

	* libsylph/imap.c:
	  imap_session_get()
	  imap_cmd_noop(): check the activity of session, and return NULL
	  if busy. This fixes crashes when message fetch and new message
	  checking happen at the same time.

2011-12-16

	* src/mainwindow.c: main_window_create(): force visibility of the
	  message view on startup only if the layout type is vertical mode.

2011-11-29

	* version 3.2.0beta4

2011-11-29

	* src/prefs_common_dialog.c: sylfilter command was added as a preset
	  of junk filter program.

2011-11-17

	* src/mainwindow.c: main_window_create(): force visibility of the
	  message view on startup (fixes wrong view size on vertical-view
	  mode).
	  main_window_get_size(): don't update summaryview_vwidth if
	  message view is not visible.

2011-10-14

	* src/summaryview.c: show both filtered and original numbers of
	  messages on the status label.
	  Show the numbers of moved/copied/deleted marks on filtered mode.

2011-10-04

	* src/quick_search.c: implemented multiple keywords search of the
	  quick search entry.

2011-09-16

	* src/summaryview.c: summary_select_row(): don't always move focus
	  when refreshing (mainly for quick search).

2011-09-15

	* libsylph/procmime.c: made MIME debug print optional and disabled by
	  default.
	* src/summaryview.c
	  src/folderview.c
	  src/mainwindow.c: prevent "imap_cmd_gen_send: cannot send command
	  because another command is already running." error by locking the
	  UI on command execution.

2011-09-08
