@@ -2,3 +2,4 @@ VOID:POINTER
 VOID:POINTER,POINTER,STRING,STRING,POINTER
 BOOLEAN:POINTER,INT,INT,STRING,POINTER
 VOID:POINTER,POINTER,BOOLEAN
+VOID:INT
