@@ -1,5 +1,15 @@
 2012-01-06
 
+	* src/inc.c
+	  src/plugin.[ch]
+	  src/plugin-marshal.list
+	  plugin/test/test.c: added new plug-in signals:
+	  "inc-mail-start": notify start of receiving
+	  "inc-mail-finished": notify end of receiving and number of new
+	  messages
+
+2012-01-06
+
 	* src/trayicon.c: extended the blinking period of tray icon to 10
 	  seconds.
 
